Fix link on mobile medals only snap|

--- a/interactive/src/css/embed.scss
+++ b/interactive/src/css/embed.scss
@@ -251,6 +251,11 @@ $bronzeLight: rgba(243,111,33,0.2);
 .facia-snap .og-snap--medals-only {
 	.og-snap__link--stacked {
 		display: block;
+		
+		@include mq(510px) {
+			position: absolute !important;
+			left: 5px;
+		}
 	}
 
 	.og-snap__link--wide {
